--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,58 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+.authpage{
+  text-align: center;
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(79deg, rgb(130, 149, 213), rgb(28, 67, 195), rgb(139, 162, 239));
+}
+
+.auth-form, .form-box{
+  display: flex;
+  flex-direction: column;
+}
+
+.auth-form{
+  padding: 50px ;
+  border-radius: 10px;
+  border: 2px solid white
+}
+
+label{
+  text-align: left;
+  padding: 10px 0px;
+  color: white;
+}
+
+input{
+  padding: 12px 20px;
+  margin-top: 10px 0px;
+  border-radius: 8px;
+  height: 50px;
+}
+
+.confirm-btn{
+  background-color: white;
+  margin: 10px 0px;
+  height: 50px;
+  border-radius: 8px;
+}
+
+.chang-auth{
+font-style: italic;
+text-decoration: underline ;
+color: white;
+}
+
+h1{
+  text-align: left;
+  font-size: 25px;
+  margin-bottom: 10px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+  font-weight: bold;
+}
