--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 .authpage{
   text-align: center;
   display: flex;
-  min-height: 800px;
+  min-height: 900px;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(79deg, rgb(130, 149, 213), rgb(28, 67, 195), rgb(139, 162, 239));
@@ -84,12 +84,15 @@ h1{
 }
 
 .topnav {
+  display: flex;
   overflow: hidden;
   background-color: #333;
+  justify-content: space-evenly;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .topnav a {
-  float: left;
+  float:right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -107,39 +110,32 @@ h1{
   color: white;
 }
 
+
 .footer {
   display: flex;
-  padding: 30px 30px 20px 30px;
+  overflow: hidden;
   background-color: #333;
+  justify-content: space-evenly;
 }
 
-.footer > * {
-  flex:  1 100%;
+.footer a {
+  float:right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.nav__title {
-  font-weight: 400;
-  font-size: 15px;
+.footer a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.footer a.active {
+  background-color: #04AA6D;
   color: white;
 }
-
-.footer ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-
-.footer__nav {
-  display: flex;
-	flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-
-  .footer__nav > * {
-    flex: 1;
-  }
   
 
 .error{
@@ -148,11 +144,12 @@ h1{
   padding: 10px;
   width: 500px;
   height: 100px;
-
 }
+
 .close:before{
   content: "\00d7"; /* This will render the 'X' */
   color: white;
+  cursor: pointer;
 }
 
 .error-text{
@@ -170,4 +167,69 @@ h1{
 
 .login{
   justify-content: center;
+}
+
+.registered{
+  background-color: rgb(13, 171, 5);
+  margin: 20px;
+  padding: 10px;
+  width: 500px;
+  height: 100px;
+}
+
+.registered-text{
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+}
+
+.homepage{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-content: center;
+  height: 100vh;
+}
+
+.sidebar{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.box{
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-style: solid;
+  border-top-width: 0px;
+  border-bottom-width: 2px;
+  border-color: #333;
+  cursor: pointer;
+}
+
+li:hover{
+  background-color: lightblue;
+}
+
+li:focus{
+  background-color: #333;
+  color: white;
+}
+
+
+h3{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.dashboard{
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+h2{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  font-size: 40px;
 }
