--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,10 @@ h1{
   font-weight: bold;
 }
 
+.main-card-header{
+  color: black;
+}
+
 .checkbox{
   width: 20px;
   margin-left: 20px;
@@ -88,6 +92,7 @@ h1{
   overflow: hidden;
   background-color: #333;
   justify-content: space-evenly;
+  align-items: center;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -161,13 +166,13 @@ h1{
 .sidebar{
 background-color: white;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
 }
 
 .box{
   height: 75px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 10px;
   align-items: center;
   border-style: solid;
   border-top-width: 0px;
@@ -225,11 +230,43 @@ margin: 15px;
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 border-radius: 8px;
 height: 100px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: black;
 }
 
+.card-1{
+  background-image: url(/writingsqueal.png);
+  background-color: black;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.arrow-back{
+  display: flex;
+  justify-content: left;
+  margin-left: 30px;
+}
+
+.feed{
+  display: flex;
+  justify-content: center;
+}
+
+.squeal{
+  display: flex;
+  justify-content: center;
+}
+
+.trend{
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 800px) {
@@ -244,6 +281,7 @@ height: 100px;
     flex-direction: column;
     justify-content: center;
     padding-bottom: 20px;
+    height: 100px;
   }
   .dashboard{
     padding-top: 20px;
