--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@ h1{
 }
 
 .error{
-  background-color: rgb(212, 46, 46);
+  background-color: rgb(198, 66, 66);
   margin: 20px;
   padding: 10px;
   width: 500px;
@@ -125,7 +125,7 @@ h1{
 }
 
 .error-text{
-  color: white;
+  color: rgb(178, 0, 0);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
 }
@@ -150,7 +150,7 @@ h1{
 }
 
 .registered-text{
-    color: white;
+    color: green;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
