--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,72 +16,78 @@
   }
 }
 
-.authpage{
+.authpage {
   text-align: center;
   display: flex;
   min-height: 900px;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(79deg, rgb(130, 149, 213), rgb(28, 67, 195), rgb(139, 162, 239));
+  background-image: linear-gradient(
+    79deg,
+    rgb(130, 149, 213),
+    rgb(28, 67, 195),
+    rgb(139, 162, 239)
+  );
 }
 
-.auth-form, .form-box{
+.auth-form,
+.form-box {
   display: flex;
   flex-direction: column;
 }
 
-.auth-form{
-  padding: 50px ;
+.auth-form {
+  padding: 50px;
   border-radius: 10px;
   border: 2px solid white;
   height: 550px;
 }
 
-label{
+label {
   text-align: left;
   padding: 10px 0px;
   color: white;
 }
 
-input{
+input {
   padding: 12px 20px;
   margin-top: 10px 0px;
   border-radius: 8px;
   height: 50px;
 }
 
-.confirm-btn{
+.confirm-btn {
   background-color: white;
   margin: 10px 0px;
   height: 50px;
   border-radius: 8px;
 }
 
-.chang-auth{
-font-style: italic;
-text-decoration: underline ;
-color: white;
+.chang-auth {
+  font-style: italic;
+  text-decoration: underline;
+  color: white;
 }
 
-h1{
+h1 {
   text-align: left;
   font-size: 25px;
   margin-bottom: 10px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
   font-weight: bold;
 }
 
-.main-card-header{
+.main-card-header {
   color: black;
 }
 
-.checkbox{
+.checkbox {
   width: 20px;
   margin-left: 20px;
 }
 
-.checkboxsection{
+.checkboxsection {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -94,11 +100,11 @@ h1{
   background-color: #333;
   justify-content: space-evenly;
   align-items: center;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .topnav a {
-  float:right;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -111,7 +117,7 @@ h1{
   color: black;
 }
 
-.error{
+.error {
   background-color: rgb(198, 66, 66);
   margin: 20px;
   padding: 10px;
@@ -119,30 +125,30 @@ h1{
   height: 100px;
 }
 
-.close:before{
+.close:before {
   content: "\00d7"; /* This will render the 'X' */
   color: white;
   cursor: pointer;
 }
 
-.error-text{
+.error-text {
   color: rgb(178, 0, 0);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
 }
 
-.space{
+.space {
   height: 100px;
   width: 500px;
   margin: 20px;
   padding: 10px;
 }
 
-.login{
+.login {
   justify-content: center;
 }
 
-.registered{
+.registered {
   background-color: rgb(13, 171, 5);
   margin: 20px;
   padding: 10px;
@@ -150,13 +156,13 @@ h1{
   height: 100px;
 }
 
-.registered-text{
-    color: green;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+.registered-text {
+  color: green;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
 }
 
-.homepage{
+.homepage {
   display: grid;
   grid-template-columns: 1fr 5fr;
   justify-content: center;
@@ -164,22 +170,22 @@ h1{
   background-color: rgb(249, 249, 249);
 }
 
-.sidebar{
-background-color: white;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.sidebar {
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.link{
+.link {
   text-decoration: underline;
   color: rgb(24, 116, 146);
 }
 
-.logo-navbar{
+.logo-navbar {
   height: 50px;
   width: 50px;
 }
 
-.box{
+.box {
   height: 75px;
   display: flex;
   justify-content: left;
@@ -192,62 +198,61 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
 
-li:hover{
-text-decoration:underline;
+li:hover {
+  text-decoration: underline;
 }
 
-li:focus{
+li:focus {
   background-color: #333;
   color: white;
 }
 
-li:active{
+li:active {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-h3{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+h3 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   font-size: 25px;
 
-  @media (max-width: 1050px){
+  @media (max-width: 1050px) {
     font-size: 18px;
   }
 }
 
-.dashboard{
+.dashboard {
   padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-h2{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+h2 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   font-size: 40px;
 }
 
-.stats-container{
+.stats-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-top: 50px;
   width: 100%;
 }
 
-.card{
-margin: 15px;
-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-border-radius: 8px;
-height: 100px;
-display: flex;
-align-items: center;
-justify-content: center;
-color: black;
+.card {
+  margin: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
 }
 
-.card-1{
+.card-1 {
   background-image: url(/writingsqueal.png);
   background-color: black;
   background-position: center;
@@ -256,52 +261,142 @@ color: black;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.arrow-back{
+.arrow-back {
   display: flex;
   justify-content: left;
   margin-left: 30px;
   margin-top: 15px;
 }
 
-.feed{
+.feed {
   display: flex;
   justify-content: center;
 }
 
-.squeal{
+.popupclass {
+  height: 600px;
+  width: 350px;
+  background-color: #1f2937;
+  position: absolute;
+  top: 8%;
+  right: 5%;
+  border-radius: 10px;
+  color: #9ca3af;
+  animation-duration: 0.3s, 0.3s;
+  animation-name: expande-or, expande-ve;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+
+  &.closed {
+    animation-duration: 0.3s, 0.3s;
+    animation-name: reduce-or, reduce-ve;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+  }
+}
+
+@keyframes expande-or {
+  0% {
+    width: 0px;
+  }
+  100% {
+    width: 350px;
+  }
+}
+
+@keyframes expande-ve {
+  0% {
+    height: 0px;
+  }
+
+  100% {
+    height: 600px;
+  }
+}
+
+@keyframes reduce-or {
+  0% {
+    width: 350px;
+  }
+  100% {
+    width: 0px;
+  }
+}
+
+@keyframes reduce-ve {
+  0% {
+    height: 600px;
+  }
+
+  100% {
+    height: 0px;
+  }
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 30px 0px 15px;
+  border-bottom: 2px solid #9ca3af;
+  color: #9ca3af;
+  margin-bottom: 20px;
+}
+
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  content: " ";
+}
+
+.popup-font {
+  font-size: 25px;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.squeal {
   display: flex;
   justify-content: center;
 }
 
-.trend{
+.trend {
   display: flex;
   justify-content: center;
+}
+
+.notification {
+  margin-left: 15px;
 }
 
 @media (max-width: 800px) {
-  .sidebar{
+  .sidebar {
     display: none;
   }
-  .homepage{
+  .homepage {
     grid-template-columns: 1fr;
   }
-  .sidebar-mobile{
+  .sidebar-mobile {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-bottom: 20px;
     height: 100px;
   }
-  .dashboard{
+  .dashboard {
     padding-top: 20px;
   }
 }
 
-@media (min-width: 800px){
-.sidebar-mobile{
-  display: none;
-}
+@media (min-width: 800px) {
+  .sidebar-mobile {
+    display: none;
+  }
 }
