--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,24 +196,42 @@ h1 {
   border-bottom-width: 2px;
   border-color: #333;
   cursor: pointer;
+  gap: 5px;
 }
 
-li:hover {
-  text-decoration: underline;
+.dashboard-atf {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-li:focus {
+.client-email {
+  margin-top: 10px;
+}
+
+.focus {
   background-color: #333;
   color: white;
 }
 
-li:active {
+.list:active {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h3 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
+  font-size: 25px;
+
+  @media (max-width: 1050px) {
+    font-size: 18px;
+  }
+}
+
+h4 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 300;
   font-size: 25px;
 
   @media (max-width: 1050px) {
@@ -232,6 +250,7 @@ h2 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   font-size: 40px;
+  text-align: center;
 }
 
 .stats-container {
