--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -253,6 +253,10 @@ h2 {
   text-align: center;
 }
 
+p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 .stats-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -392,7 +396,7 @@ h2 {
 
 .trend {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
 
 .notification {
