--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -255,6 +255,7 @@ h2 {
 
 p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
 }
 
 .stats-container {
