--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -253,6 +253,14 @@ h2 {
   text-align: center;
 }
 
+.selected {
+  padding: 1px;
+  border-radius: 15px;
+  border-color: #1f2937;
+  border-width: 2px;
+  background-color: rgb(24, 116, 146);
+}
+
 p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
