--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -261,6 +261,10 @@ h2 {
   background-color: rgb(24, 116, 146);
 }
 
+.notdisplayed {
+  display: none;
+}
+
 p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
