--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,9 +71,9 @@ input {
 
 h1 {
   text-align: left;
-  font-size: 25px;
+  font-size: 50px;
   margin-bottom: 10px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   font-weight: bold;
 }
@@ -101,7 +101,7 @@ h1 {
   background-color: #333;
   justify-content: space-evenly;
   align-items: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .topnav a {
@@ -134,7 +134,7 @@ h1 {
 
 .error-text {
   color: rgb(178, 0, 0);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
 }
 
@@ -159,7 +159,7 @@ h1 {
 
 .registered-text {
   color: green;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
 }
 
@@ -228,9 +228,10 @@ h1 {
 }
 
 h3 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
+  text-align: center;
 
   @media (max-width: 1050px) {
     font-size: 18px;
@@ -238,7 +239,7 @@ h3 {
 }
 
 h4 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   font-size: 25px;
 
@@ -255,9 +256,9 @@ h4 {
 }
 
 h2 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 35px;
   text-align: center;
 }
 
@@ -278,7 +279,7 @@ h2 {
 }
 
 p {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
 }
 
@@ -299,8 +300,7 @@ p {
   justify-content: center;
   color: black;
   h3 {
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     font-size: 40px;
 
