--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -290,6 +290,13 @@ p {
   width: 100%;
 }
 
+.chart{
+  display: flex;
+  justify-content: center;
+  width: auto;
+  height:auto;
+}
+
 .card {
   margin: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
