--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -166,7 +166,7 @@ h1 {
   display: flex;
 
   justify-content: center;
-  min-height: 1000px;
+  min-height: 100vh;
   height: auto;
   background-color: rgb(249, 249, 249);
 }
