--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 .authpage {
   text-align: center;
   display: flex;
-  min-height: 900px;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(
