--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: #f4f4f4;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: #f4f4f4;
+    --background-end-rgb: #f4f4f4;
   }
 }
 
@@ -164,7 +164,6 @@ h1 {
 
 .homepage {
   display: flex;
-
   justify-content: center;
   min-height: 100vh;
   height: auto;
@@ -173,13 +172,6 @@ h1 {
 
 .homepage-display {
   width: 100%;
-}
-
-.sidebar {
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  height: auto;
-  min-height: 1000px;
 }
 
 .link {
@@ -331,8 +323,8 @@ p {
 .arrow-back {
   display: flex;
   justify-content: left;
-  margin-left: 30px;
-  margin-top: 15px;
+  padding-left: 30px;
+  padding-top: 15px;
 }
 
 .feed {
@@ -344,13 +336,14 @@ p {
 
 .popupclass {
   height: 600px;
-  width: 350px;
-  background-color: #1f2937;
+  width: 375px;
+  background-color: #f4f4f4;
   position: absolute;
   top: 8%;
   right: 5%;
   border-radius: 10px;
-  color: #9ca3af;
+  border: 1px solid black;
+  color: black;
   animation-duration: 0.3s, 0.3s;
   animation-name: expande-or, expande-ve;
   animation-iteration-count: 1;
@@ -407,7 +400,7 @@ p {
   justify-content: space-between;
   padding: 0px 30px 0px 15px;
   border-bottom: 2px solid #9ca3af;
-  color: #9ca3af;
+  color: black;
   margin-bottom: 20px;
 }
 
@@ -441,12 +434,13 @@ p {
 }
 
 .notification {
-  display:flex;
+  display: flex;
   flex-direction: column;
   gap: 10px;
   justify-content: center;
   align-items: center;
   margin-left: 15px;
+  margin-right: 15px;
   margin-bottom: 15px;
 }
 
@@ -458,7 +452,7 @@ p {
 .svg-icon path,
 .svg-icon polygon,
 .svg-icon rect {
-  fill: black;
+  fill: white;
 }
 
 .svg-icon circle {
