--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,25 +22,6 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(
-    79deg,
-    rgb(130, 149, 213),
-    rgb(28, 67, 195),
-    rgb(139, 162, 239)
-  );
-}
-
-.auth-form,
-.form-box {
-  display: flex;
-  flex-direction: column;
-}
-
-.auth-form {
-  padding: 50px;
-  border-radius: 10px;
-  border: 2px solid white;
-  height: 550px;
 }
 
 label {
@@ -145,7 +126,7 @@ h1 {
 }
 
 .login {
-  justify-content: center;
+  background-image: linear-gradient(79deg, #765bbf, #4b2ca0, #765bbf);
 }
 
 .registered {
